--- a/css/style.css
+++ b/css/style.css
@@ -17,15 +17,14 @@ body {
     top: 5%;
 }
 
-.characterLine {
+.resultContainer {
     width: calc(100% - 18px*2);
     height: 15%;
 
     padding: 15px;
-    
-    line-height: 9vh;
+
+    line-height: 4vh;
     text-align: right;
-    font-size: 4vh;
 
     border: 3px solid #555;
 
@@ -35,9 +34,9 @@ body {
 .buttonContainer {
     width: 100%;
     height: 85%;
-
+    
     display: grid;
-
+    
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr;
     column-gap: 1vh;
@@ -45,11 +44,32 @@ body {
 }
 
 .button {
+    user-select: none;
+    
     line-height: 11vh;
     text-align: center;
-
+    
     background-color: #2f2f2f;
-    border: 3px solid #555;
+    border: 3px solid #555555;
+
+    transition: background-color 0.1s ease-in-out;
+}
+
+.button:hover {
+    background-color: #555555;
+    border: 3px solid #555555;
+}
+
+#previous {
+    font-size: 3vh;
+
+    color:#a6a6a6;
+    height: 50%;
+}
+
+#current {
+    font-size: 4vh;
+    height: 50%;
 }
 
 /* .part {
